# fictional-scientists

./: .gitignore  .pre-commit-config.yaml  README.md  compile_catalog.py  create_distribution_sample.py  create_sample_quota.py  create_scientists_csv.py  download_scientists.py  download_wikipedia_faces.py  evaluate_portraits_embeddings.py  expand_quota.py  fictional_scientists.jsonl  fictional_scientists_portraits.jsonl  generate.py  generate_images.py  generate_name.py  generate_portrait_prompt.py  generate_profile.py  generate_text.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: update-version-manual.yml
data/attributes/: fictional_scientist_quota_expanded_10000.csv  fictional_scientist_quota_master_10000.csv  fictional_scientist_quota_summary_10000.csv
data/names/: fictional_scientist_names.csv
data/sample/distribution_1000/: quota.csv
data/sample/era_only_13/: fictional_scientists_portraits.jsonl  quota.csv
data/sample/nationality_era_100/: fictional_scientist_quota_expanded_sample_nationality_era_100.csv  portrait_prompts.jsonl  profiles.jsonl
data/sample/ten_similar_ancient/: quota.csv
data/sample/ten_similar_modern/: quota.csv
data/sample/two/: names.csv  (+4 more)
data/wikipedia/: scientists_ja.csv
docs/: qiita_article.md
manual_tests/: test_generate_image_api.py
tests/: test_compile_catalog.py  test_create_scientists_csv.py  test_download_scientists.py  test_download_wikipedia_faces.py  test_evaluate_portraits_embeddings.py  test_expand_quota.py  test_generate.py  test_generate_images.py  test_generate_name.py  test_generate_portrait_prompt.py  test_generate_profile.py
(+9 files in other folders)
