[project]
name = "fictional-scientists"
dynamic = ["version"]
description = "A modern Python project template optimized for Claude Code with strict guardrails"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.26.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
include = ["src/**/*.py"]

[tool.pyright]
include = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "pre-commit>=3.7.0",
    "taskipy>=1.14.1",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]

# =====================
# taskipy タスク定義
# =====================
[tool.taskipy.tasks]
check = """
  uv run ruff format &&
  uv run ruff check --fix &&
  uv run pyright &&
  uv run pytest tests
"""

# DIR=<作業ディレクトリ> uv run task generate で全フェーズを順番に実行
# FORCE=1 を指定すると既存ファイルを無視して再生成する
# MAX_ROWS=<件数> を指定すると生成件数の上限を変更する
generate = """
  uv run python generate_name.py --dir $DIR ${FORCE:+--force} ${MAX_ROWS:+--max-rows $MAX_ROWS} &&
  uv run python generate_profile.py --dir $DIR ${FORCE:+--force} ${MAX_ROWS:+--max-rows $MAX_ROWS} &&
  uv run python generate_portrait_prompt.py --dir $DIR ${FORCE:+--force} ${MAX_ROWS:+--max-rows $MAX_ROWS} &&
  uv run python generate_images.py --dir $DIR ${FORCE:+--force} &&
  uv run python compile_catalog.py --dir $DIR
"""
